Sort column values in natural order